[TASK] allow mpdf:^8 in order to support a 9LTS install on php7.4

--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
   "type": "typo3-cms-extension",
   "require": {
     "typo3/cms-core": "^8.7 || ^9.5",
-    "mpdf/mpdf": "^7.1",
+    "mpdf/mpdf": "^7.1 || ^8",
     "php": ">=7.0"
   },
   "require-dev": {
